[gd_scene load_steps=2 format=2]

[ext_resource path="res://assets/UI/control_elements/LabelSliderMix/LabelSliderMix.gd" type="Script" id=1]

[node name="SliderOption" type="HBoxContainer"]
margin_right = 310.0
margin_bottom = 45.0
script = ExtResource( 1 )

[node name="_Spacer" type="Label" parent="."]
margin_top = 15.0
margin_right = 12.0
margin_bottom = 29.0
text = "   "

[node name="OptionLabel" type="Label" parent="."]
margin_left = 16.0
margin_top = 15.0
margin_right = 60.0
margin_bottom = 29.0
size_flags_vertical = 6
text = "Option"

[node name="OptionSlider" type="HSlider" parent="."]
margin_left = 64.0
margin_right = 232.0
margin_bottom = 45.0
size_flags_horizontal = 3
size_flags_vertical = 3
rounded = true
ticks_on_borders = true

[node name="OptionInput" type="SpinBox" parent="."]
margin_left = 236.0
margin_top = 10.0
margin_right = 310.0
margin_bottom = 34.0
size_flags_horizontal = 5
size_flags_vertical = 4
rounded = true

